[workspace]
members = [
    "bbox-common",
    "bbox-feature-server",
    "bbox-file-server",
    "bbox-map-server",
    "bbox-map-server/mock-fcgi-wms",
    "bbox-map-viewer",
    "bbox-processes-server",
    "bbox-routing-server",
    "bbox-server",
    "bbox-tile-server",
]
default-members = ["bbox-server"]

[workspace.dependencies]
actix-web = "4.0.0"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.21"
geozero = { version = "0.9.2" }
log = "0.4.17"
minijinja = { version = "0.17.0", features = ["source"] }
once_cell = "1.12.0"
rust-embed = { version = "5.6.0", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.6.2", default-features = false, features = [ "runtime-tokio-native-tls", "sqlite", "postgres" ] }
thiserror = "1.0.31"
tokio = { version = "1.19.2" }

#[patch.crates-io]
#fast_paths = { path = "../fast_paths" }
