[workspace]
members = [
    "bbox-core",
    "bbox-feature-server",
    "bbox-asset-server",
    "bbox-map-server",
    "bbox-map-server/mock-fcgi-wms",
    "bbox-map-viewer",
    "bbox-processes-server",
    "bbox-routing-server",
    "bbox-server",
    "bbox-tile-server",
]
default-members = ["bbox-server"]

[workspace.package]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
actix-web = { version = "4.0.0", features = ["rustls"] }
async-stream = "0.3.4"
async-trait = "0.1.65"
awc = "3.0.0" # features = ["rustls"]
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.21"
geozero = { version = "0.9.2" }
log = "0.4.17"
minijinja = { version = "1.0.0", features = ["loader"] }
num_cpus = "1.13.1"
once_cell = "1.12.0"
opentelemetry = { version = "0.18", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
rust-embed = { version = "5.6.0", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.6.2", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "postgres" ] }
thiserror = "1.0.31"
tokio = { version = "1.19.2" }

#[patch.crates-io]
#tile-grid = { path = "../tile-grid" }
#fast_paths = { path = "../fast_paths" }
