[package]
name = "bbox-asset-server"
version = "0.5.0-alpha3"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[dependencies]
actix-files = "0.6.0"
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core" }
clap = { workspace = true }
configparser = "3.0.0"
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tempfile = "3.2.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }

[[bin]]
name = "bbox-asset-server"
path = "src/main.rs"
