[package]
name = "bbox-asset-server"
version = "0.6.1"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]
readme = "README.md"
description = "Serving static and templated files"
categories = ["science::geo"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
actix-files = "0.6.0"
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core", version = "0.6.1" }
clap = { workspace = true }
configparser = "3.0.0"
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[[bin]]
name = "bbox-asset-server"
path = "src/main.rs"
