[package]
name = "bbox-common"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env", "toml"] }
once_cell = "1.8.0"
ignore = "0.4"
actix-web = "4.0.0"
minijinja = { version = "0.8.2", features = ["source"] }
rust-embed = { version = "5.6.0", features = ["compression"] }
mime = "0.3.16"
mime_guess = "2.0.3"
fxhash = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.24"

[dev-dependencies]


[lib]
path = "src/lib.rs"
