[package]
name = "bbox-common"
version = "0.1.0"
edition = "2018"

[features]
html = []

[dependencies]
actix-web = { workspace = true }
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env", "toml"] }
fxhash = "0.2.1"
ignore = "0.4"
mime = "0.3.16"
mime_guess = "2.0.3"
minijinja = { workspace = true }
num_cpus = { workspace = true }
once_cell = "1.8.0"
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.8.24"

[dev-dependencies]


[lib]
path = "src/lib.rs"
