[package]
name = "bbox-common"
version = "0.1.0"
edition = "2018"

[features]
html = []

[dependencies]
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = { workspace = true }
actix-web-opentelemetry = { version = "0.13", features = ["metrics-prometheus"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env", "toml"] }
futures-core = "0.3.28"
fxhash = "0.2.1"
ignore = "0.4"
log = { workspace = true }
mime = "0.3.16"
mime_guess = "2.0.3"
minijinja = { workspace = true }
num_cpus = { workspace = true }
once_cell = "1.8.0"
openidconnect = "3.2.0"
opentelemetry = { workspace = true }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-prometheus = { version = "0.11" }
prometheus = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
rustls = "0.20.8" # Same as actix-tls -> tokio-rustls
rustls-pemfile = "1.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.8.24"
thiserror = { workspace = true }

[dev-dependencies]


[lib]
path = "src/lib.rs"
