[package]
name = "bbox-core"
version = "0.6.1"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]
readme = "README.md"
description = "Common functionality for BBOX services"
categories = ["science::geo"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
html = []
oidc = ["openidconnect", "reqwest"]

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = { workspace = true }
actix-web-opentelemetry = { version = "0.13", features = ["metrics-prometheus"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
env_logger = "0.11.5"
figment = { version = "0.10.6", features = ["env", "toml"] }
flate2 = "1.0.28"
futures-core = "0.3.28"
fxhash = "0.2.1"
ignore = "0.4"
log = { workspace = true }
mime = "0.3.16"
mime_guess = "2.0.3"
minijinja = { workspace = true }
num_cpus = { workspace = true }
once_cell = "1.8.0"
openidconnect = { version = "3.2.0", optional = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-prometheus = { version = "0.11" }
prometheus = { workspace = true }
reqwest = { workspace = true, optional = true }
rust-embed = { workspace = true }
rustls = "0.20.8" # Same as actix-tls -> tokio-rustls
rustls-pemfile = "1.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]


[lib]
path = "src/lib.rs"
