[package]
name = "bbox-feature-server"
version = "0.5.0-alpha4"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[features]
html = ["bbox-core/html"]

[dependencies]
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core" }
chrono = "0.4"
clap = { workspace = true }
dyn-clone = "1.0.6"
futures = { workspace = true }
geozero = { workspace = true, features = [ "with-gpkg", "with-postgis-sqlx" ] }
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
test-log = "0.2.14"

[[bin]]
name = "bbox-feature-server"
path = "src/main.rs"
