[package]
name = "bbox-feature-server"
version = "0.5.0-beta5"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
html = ["bbox-core/html"]

[dependencies]
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core" }
chrono = { workspace = true }
clap = { workspace = true }
dyn-clone = "1.0.6"
futures = { workspace = true }
geozero = { workspace = true, features = [ "with-gpkg", "with-postgis-sqlx" ] }
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
test-log = "0.2.14"

[[bin]]
name = "bbox-feature-server"
path = "src/main.rs"
