[package]
name = "bbox-file-server"
version = "0.1.0"
edition = "2018"

[dependencies]
bbox-common = { path = "../bbox-common" }
actix-web = "4.0.0"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
once_cell = "1.8.0"
minijinja = { version = "0.8.2", features = ["source"] }
rust-embed = { version = "5.6.0", features = ["compression"] }
tempfile = "3.2.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
configparser = "3.0.0"
