[package]
name = "bbox-file-server"
version = "0.1.0"
edition = "2018"

[dependencies]
bbox-common = { path = "../bbox-common" }
actix-web = { workspace = true }
actix-files = "0.6.0"
serde = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
minijinja = { workspace = true }
rust-embed = { workspace = true }
tempfile = "3.2.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
configparser = "3.0.0"

[[bin]]
name = "bbox-file-server"
path = "src/main.rs"
