[package]
name = "bbox-file-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6.0"
actix-web = { workspace = true }
bbox-common = { path = "../bbox-common" }
configparser = "3.0.0"
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tempfile = "3.2.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }

[[bin]]
name = "bbox-file-server"
path = "src/main.rs"
