[package]
name = "bbox-frontend"
version = "0.5.0-alpha2"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[features]
default = ["redoc", "openlayers", "maplibre", "proj"]
all = ["default", "qwc2", "swaggerui"]
redoc = []
swaggerui = []
qwc2 = ["bbox-map-server/inventory"]
openlayers = []
maplibre = []
proj = []

[dependencies]
actix-web = { workspace = true }
bbox-core = { path = "../bbox-core", features=["html"] }
bbox-map-server = { path = "../bbox-map-server", optional = true }
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rand = "0.7.3"
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[lib]
path = "src/lib.rs"
