[package]
name = "bbox-frontend"
version = "0.6.0"
readme = "README.md"
description = "HTML frontend for BBOX services"
categories = ["science::geo"]
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = ["redoc", "openlayers", "maplibre", "proj"]
all = ["default", "qwc2", "swaggerui"]
map-server = ["bbox-map-server/inventory"]
qwc2 = ["map-server"]
redoc = []
swaggerui = []
openlayers = []
maplibre = []
proj = []

[dependencies]
actix-web = { workspace = true }
bbox-core = { path = "../bbox-core", version = "0.6.0", features=["html"] }
bbox-map-server = { path = "../bbox-map-server", version = "0.6.0", optional = true }
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rand = "0.7.3"
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[lib]
path = "src/lib.rs"
