[package]
name = "bbox-map-server"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[features]
inventory = []

[dependencies]
actix-web = { workspace = true }
async-process = "1.0.0"
async-stream = "0.3.4"
async-trait = { workspace = true }
awc = "3.0.0-beta.20"
bbox-common = { path = "../bbox-common" }
bufstream = "0.1.4"
deadpool = { version = "0.9.2", default-features = false, features = ["managed", "rt_tokio_1"] }
fastcgi-client = { version = "0.5.0", default-features = false }
log = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { version = "0.17", default-features = false, features = ["trace", "metrics"] }
prometheus = { version = "0.13", default-features = false }
rand = "0.7.3"
serde = { workspace = true }
serde-xml-rs = "0.4.0"
serde_json = { workspace = true }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]

[[bin]]
name = "bbox-map-server"
path = "src/main.rs"
