[package]
name = "bbox-map-server"
version = "0.5.0-alpha6"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[features]
inventory = []

[dependencies]
actix-web = { workspace = true }
async-process = "1.0.0"
async-trait = { workspace = true }
awc = { workspace = true }
bbox-core = { path = "../bbox-core" }
bufstream = "0.1.4"
clap = { workspace = true }
deadpool = { version = "0.9.2", default-features = false, features = ["managed", "rt_tokio_1"] }
fastcgi-client = { version = "0.5.0", default-features = false }
log = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
prometheus = { workspace = true }
rand = "0.7.3"
serde = { workspace = true }
serde-xml-rs = "0.4.0"
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]

[[bin]]
name = "bbox-map-server"
path = "src/main.rs"
