[package]
name = "bbox-map-viewer"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
bbox-common = { path = "../bbox-common" }
bbox-map-server = { path = "../bbox-map-server" }
bbox-feature-server = { path = "../bbox-feature-server" }
actix-web = "4.0.0"
log = "0.4"
minijinja = { version = "0.8.2", features = ["source"] }
rand = "0.7.3"
once_cell = "1.8.0"
serde = "1.0.116"
serde_json = "1.0.57"
rust-embed = { version = "5.6.0", features = ["compression"] }

[dev-dependencies]

[lib]
path = "src/lib.rs"
