[package]
name = "bbox-map-viewer"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
bbox-common = { path = "../bbox-common" }
bbox-map-server = { path = "../bbox-map-server" }
bbox-feature-server = { path = "../bbox-feature-server" }
actix-web = { workspace = true }
log = { workspace = true }
minijinja = { workspace = true }
rand = "0.7.3"
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }

[dev-dependencies]

[lib]
path = "src/lib.rs"
