[package]
name = "bbox-map-viewer"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = { workspace = true }
bbox-core = { path = "../bbox-core", features=["html"] }
bbox-feature-server = { path = "../bbox-feature-server" }
bbox-map-server = { path = "../bbox-map-server" }
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
rand = "0.7.3"
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[lib]
path = "src/lib.rs"
