[package]
name = "bbox-processes-server"
version = "0.5.0-alpha0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[dependencies]
actix-files = "0.6.0"
actix-web = { workspace = true }
async-trait = { workspace = true }
awc = { workspace = true }
bbox-core = { path = "../bbox-core" }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swagger = { version = "6.1", features = ["serdejson"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }

[[bin]]
name = "bbox-processes-server"
path = "src/main.rs"
