[package]
name = "bbox-processes-server"
version = "0.5.0"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
actix-files = "0.6.0"
actix-web = { workspace = true }
async-trait = { workspace = true }
awc = { workspace = true }
bbox-core = { path = "../bbox-core" }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swagger = { version = "6.1", features = ["serdejson"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }

[[bin]]
name = "bbox-processes-server"
path = "src/main.rs"
