[package]
name = "bbox-processes-server"
version = "0.6.1"
readme = "README.md"
description = "BBOX OGC API Processes Service"
keywords = ["processes", "workflows"]
categories = ["science::geo"]
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
actix-files = "0.6.0"
actix-web = { workspace = true }
async-trait = { workspace = true }
awc = { workspace = true }
bbox-core = { path = "../bbox-core", version = "0.6.1" }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swagger = { version = "6.1", features = ["serdejson"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }

[[bin]]
name = "bbox-processes-server"
path = "src/main.rs"
