[package]
name = "bbox-routing-server"
version = "0.1.0"
edition = "2021"

[features]
openapi = []

[dependencies]
bbox-common = { path = "../bbox-common" }
actix-web = { workspace = true }
fast_paths = { git = "https://github.com/pka/fast_paths", branch="edges-access" }
futures = { workspace = true }
geo = "0.19.0"
geojson = "0.22.3"
geozero = { workspace = true, features = [ "with-gpkg" ] }
rstar = "0.9.2"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
figment = "0.10.6"
polyline = "0.9.0"
geo-types = "0.7.6"
bincode = "1.3.3"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "bbox-routing-server"
path = "src/main.rs"
