[package]
name = "bbox-routing-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core" }
bincode = "1.3.3"
clap = { workspace = true }
fast_paths = { git = "https://github.com/pka/fast_paths", branch="edges-access" }
figment = "0.10.6"
futures = { workspace = true }
geo = "0.19.0"
geo-types = "0.7.6"
geojson = "0.22.3"
geozero = { workspace = true, features = [ "with-gpkg" ] }
log = { workspace = true }
polyline = "0.9.0"
rstar = "0.9.2"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "bbox-routing-server"
path = "src/main.rs"
