[package]
name = "bbox-routing-server"
version = "0.1.0"
readme = "README.md"
description = "BBOX Routing Service"
keywords = ["routing"]
categories = ["science::geo"]
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core", version = "0.6.0-beta1" }
bincode = "1.3.3"
clap = { workspace = true }
fast_paths = "0.2.0"
#fast_paths = { git = "https://github.com/pka/fast_paths", branch="edges-access" }
figment = "0.10.6"
futures = { workspace = true }
geo = "0.19.0"
geo-types = "0.7.6"
geojson = "0.22.3"
geozero = { workspace = true, features = [ "with-gpkg", "with-postgis-sqlx" ] }
log = { workspace = true }
polyline = "0.9.0"
rstar = "0.9.2"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "bbox-routing-server"
path = "src/main.rs"
