[package]
name = "bbox-server"
version = "0.6.1"
readme = "README.md"
description = "BBOX OGC API Services"
keywords = ["maps", "tiles", "postgis"]
categories = ["science::geo"]
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = ["feature-server", "asset-server", "map-server", "processes-server", "tile-server", "frontend"]
feature-server = ["bbox-feature-server"]
asset-server = ["bbox-asset-server"]
map-server = ["bbox-map-server", "bbox-tile-server?/map-server", "bbox-frontend?/map-server"]
processes-server = ["bbox-processes-server"]
routing-server = ["bbox-routing-server"]
tile-server = ["bbox-tile-server"]
frontend = ["bbox-frontend", "bbox-feature-server?/html"]
qwc2 = ["bbox-frontend?/qwc2"]

[dependencies]
actix-service = "2.0.2"
actix-web = { workspace = true }
async-trait = { workspace = true }
bbox-asset-server = { path = "../bbox-asset-server", version = "0.6.1", optional = true }
bbox-core = { path = "../bbox-core", version = "0.6.1" }
bbox-feature-server = { path = "../bbox-feature-server", version = "0.6.1", optional = true }
bbox-frontend = { path = "../bbox-frontend", version = "0.6.1",  optional = true }
bbox-map-server = { path = "../bbox-map-server", version = "0.6.1", optional = true }
bbox-processes-server = { path = "../bbox-processes-server", version = "0.6.1", optional = true }
bbox-routing-server = { path = "../bbox-routing-server", version = "0.1.0", optional = true }
bbox-tile-server = { path = "../bbox-tile-server", version = "0.6.1", default-features = false, optional = true }
clap = { workspace = true }
log = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
open = "5.3.0"
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "bbox-server"
path = "src/main.rs"
