[package]
name = "bbox-tile-server"
version = "0.5.0-alpha4"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[features]
default = ["map-server", "asset-server"]
map-server = ["bbox-map-server"]
asset-server = ["bbox-asset-server"]
# wms-proxy = ["reqwest"]
# s3 = ["rusoto_core", "rusoto_s3"]
projtransform = ["tile-grid/projtransform"]

[dependencies]
actix-web = { workspace = true }
anyhow = "1.0.52"
async-channel = "1.6.1"
async-trait = { workspace = true }
bbox-core = { path = "../bbox-core" }
bbox-asset-server = { path = "../bbox-asset-server", optional = true }
bbox-map-server = { path = "../bbox-map-server", optional = true }
bytes = "1.1.0"
clap = { workspace = true }
crossbeam = "0.8.1"
dyn-clone = "1.0.6"
futures = "0.3"
futures-util = "0.3.21"
geozero = { workspace = true, features = [ "with-mvt", "with-postgis-sqlx" ] }
indicatif = "0.16.2"
log = { workspace = true }
martin-mbtiles = { package = "mbtiles", version = "0.7.2", default-features = false }
martin-tile-utils = "0.1.3"
num_cpus = { workspace = true }
once_cell = { workspace = true }
pmtiles = { version = "0.3.1", features = ["mmap-async-tokio"] }
pmtiles2 = { version = "0.2.2", default-features = false }
prometheus = { workspace = true }
reqwest = { workspace = true }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
#tile-grid = "0.5.2"
tile-grid = { git = "https://github.com/pka/tile-grid" }
tilejson = "0.3.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "fs", "sync"] }

[[bin]]
name = "bbox-tile-server"
path = "src/main.rs"
